@@ -1,3 +1,4 @@
+	* simplify proxy handling. A proxy now overrides listen_interfaces
 	* fix issue in reading resume data
 	* revert NXDOMAIN change from 1.2.4
 	* don't open any listen sockets if listen_interfaces is empty or misconfigured
